<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="400dp" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/image"
        android:text="@string/name"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtName"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/txtName"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtName"
        android:layout_below="@id/txtName"
        android:text="@string/phone"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtPhone"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/txtPhone"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtName"
        android:layout_below="@id/txtPhone"
        android:text="@string/longitude"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtLongitude"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/txtLongitude"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtName"
        android:layout_below="@id/txtLongitude"
        android:text="@string/latitude"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtLatitude"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/txtLatitude"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtName"
        android:layout_below="@id/txtLatitude"
        android:text="@string/battery"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/battery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/txtBattery"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/txtBattery"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtName"
        android:layout_below="@id/txtBattery"
        android:text="@string/order"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/serve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtName"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/serveClient" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:text="@string/close" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@id/txtOrder"
        android:layout_below="@id/txtOrder" >

        <TextView
            android:id="@+id/order"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:textSize="22sp" />
    </ScrollView>

</RelativeLayout>